[ACTION] Fix white vertical gradient height on IE 7/8

--- a/style-ie.css
+++ b/style-ie.css
@@ -36,3 +36,7 @@ input {
 input[type=radio] {
   margin: -3px;
 }
+
+table#top td#wgrad div#white {
+    height: 4px;
+}
